[GymHubCommunity#124] refactor: 메소드명을 좀 더 명확하도록 수정